--- a/tourist.css
+++ b/tourist.css
@@ -1,10 +1,12 @@
 .tour-highlight{
-  background: transparent;
+  /*background: rgba(0, 241, 255, 0.701961);*/
   -moz-box-shadow: 0px 0px 7px 0px rgba(0, 241, 255, 0.701961);
   -webkit-box-shadow: 0px 0px 7px 0px rgba(0, 241, 255, 0.701961);
   -o-box-shadow: 0px 0px 7px 0px rgba(0, 241, 255, 0.701961);
   box-shadow: 0px 0px 7px 0px rgba(0, 241, 255, 0.701961);
   border-radius: 2px;
+  z-index: 1001 !important;
+  position: relative;
 }
 
 /* bootstrap styles */
@@ -21,7 +23,19 @@
 }
 
 .tour-container .tour-close + p:nth-child(2) {
-    margin-right: 25px;
+  margin-right: 25px;
+}
+
+.tourist-cover {
+  position: fixed;
+  left: 0;
+  top: 0;
+  background: #202020;
+  opacity: 0.25;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  overflow: hidden;
 }
 
 .tourist-popover .popover-content .action-label{
